# taking-notes

./: .gitignore  README.md  RELEASE_NOTES.md  cls  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  migration.rs  notes_manager.rs  utils.rs
src-tauri/src/commands/: files.rs  migration.rs  mod.rs  notes.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ButtonAddFavorite.tsx  ButtonCopy.tsx  ButtonPreviewHtml.tsx  ButtonPreviewMarkdown.tsx  ButtonProtectNote.tsx  ErrorDisplay.tsx  Grainy.tsx  Icons.tsx  Loading.tsx  MDEditor.tsx  MarkdownContent.tsx  ModalPlaceholder.tsx  Navbar.tsx  NoteLink.tsx  NotesCount.tsx  NotesList.tsx  SearchBar.tsx  app-header.tsx  editor.tsx  external-file-listener.tsx  file-drop-zone.tsx  footer.tsx  list-page-loader.tsx  menu-bar.tsx  menu.tsx  migration-runner.tsx  recent-files-page-loader.tsx  shortcut-provider.tsx  updater-runner.tsx  welcome.tsx  window-controls.tsx
src/context/: draft-provider.tsx  editor-provider.tsx  migration-provider.tsx  modal-provider.tsx  update-provider.tsx
src/hooks/: useAsyncResult.ts  useCreateNote.ts  useFetchNotesMetadata.ts  useSaveNote.ts  useSearchQueryUpdater.ts
src/lib/: commands.ts  constants.ts  definitions.ts  markdown.service.ts  notes.service.ts  types.d.ts  types.ts  utils.ts  (+1 more)
(+29 files in other folders)
